attached_assets/Pasted-Node-js-v25-1-0-Exited-with-status-1-Common-ways-to-troubleshoot-your-deploy-ht-1762641837443_1762641837444.txt
Node.js v25.1.0
     ==> Exited with status 1
     ==> Common ways to troubleshoot your deploy: https://render.com/docs/troubleshooting-deploys
==> Running 'node index.js'
/opt/render/project/src/routes/notifications.js:31
    const count = await Notification.countDocuments({ userId, read = false });
                                                              ^^^^^^^^^^^^
SyntaxError: Invalid shorthand property initializer
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at Module._compile (node:internal/modules/cjs/loader:1734:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1503:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (/opt/render/project/src/index.js:10:29)
Node.js v25.1.0
==> Running 'node index.js'
â° Expiry alert cron job scheduled (daily at 9 AM)
Warning: connect.session() MemoryStore is not
â° Nearby item monitoring scheduled (every 30 minutes)
designed for a production environment, as it will leak
memory, and will not scale past a single process.
[CRON] Expiration cleanup job scheduled (runs every hour)
âœ… Server running on port 10000
ðŸŒ Environment: production
ðŸ”’ CORS enabled for: https://grocery-share-frontend.vercel.app, http://localhost:5000, http://localhost:3000, http://localhost:5173, https://grocery-share-frontend.vercel.app
ðŸ“¡ Ready to receive requests!
âœ… MongoDB connected successfully
ðŸ“¦ Database: test
==> Running 'node index.js'
/opt/render/project/src/routes/notifications.js:31
    const count = await Notification.countDocuments({ userId, read = false });
                                                              ^^^^^^^^^^^^
SyntaxError: Invalid shorthand property initializer
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at Module._compile (node:internal/modules/cjs/loader:1734:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1503:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (/opt/render/project/src/index.js:10:29)
Node.js v25.1.0